fix opacity problems with productInfo image on mobile

--- a/frontend/src/pages/productInfo/productInfo.css
+++ b/frontend/src/pages/productInfo/productInfo.css
@@ -29,6 +29,12 @@
   transition: opacity 0.1s ease-in-out;
 }
 
+@media (hover: none) {
+  .productInfo-image-container {
+    opacity: 1 !important;
+  }
+}
+
 .productInfo img {
   width: 300px;
   border-radius: 7px;
